--- a/backend/ai-engine/pom.xml
+++ b/backend/ai-engine/pom.xml
@@ -40,6 +40,17 @@
             <artifactId>tokenizers</artifactId>
             <version>0.24.0</version>
         </dependency>
+        <!-- Elasticsearch -->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
