--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -45,6 +45,7 @@
         <milvus-client.version>2.3.4</milvus-client.version>
         <httpclient.version>4.5.14</httpclient.version>
         <fastjson.version>2.0.60</fastjson.version>
+        <elasticsearch.version>7.17.9</elasticsearch.version>
     </properties>
 
     <dependencyManagement>
